--- a/source/scss/_helpers.scss
+++ b/source/scss/_helpers.scss
@@ -18,7 +18,7 @@
   }
 
   &.--is-disabled {
-    background-color: #5E91DB;
+    background-color: $color-bg;
     pointer-events: none;
     box-shadow: none;
   }
@@ -70,7 +70,7 @@
   margin: 23px 0 12px 0;
 
   &__progress {
-    background-color: #5E91DB;
+    background-color: $color-bg;
     border-radius: 8px;
     height: 16px;
     max-width: 100%;
