--- a/source/scss/config/_colors.scss
+++ b/source/scss/config/_colors.scss
@@ -5,5 +5,6 @@ $color-grey: #939393;
 $color-light-black: #414141;
 $color-light-blue: #E3F6FA;
 $color-white: #FFFFFF;
-
+$color-blue: #25253C;
 $color-disabled: #939393;
+$color-bg: #5E91DB;
